--- a/.github/workflows/tgnotifi.yml
+++ b/.github/workflows/tgnotifi.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Send notification
         env:
-          BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
+          CHAT_ID: ${{ secrets.CHAT_ID }}
         run: |
           python3 telegram.py
